[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["embedded", "no-std"]
description = "`μfmt` macros"
edition = "2018"
keywords = ["Debug", "Display", "Write", "format"]
license = "MIT OR Apache-2.0"
name = "ufmt-macros"
repository = "https://github.com/japaric/ufmt"
version = "0.1.0-beta.4"

[lib]
proc-macro = true

[dependencies]
quote = "0.6.12"
proc-macro2 = "0.4.29"

[dependencies.syn]
features = ["full"]
version = "0.15.33"
