[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["embedded", "no-std"]
description = "`μfmt` macros"
edition = "2018"
keywords = ["Debug", "Display", "Write", "format"]
license = "MIT OR Apache-2.0"
name = "ufmt-macros"
repository = "https://github.com/japaric/ufmt"
version = "0.1.1"

[lib]
proc-macro = true

[dependencies]
proc-macro-hack = { version = "0.5.11", optional = true }
proc-macro2 = "1"
quote = "1"

[dependencies.syn]
features = ["full"]
version = "1"