[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"
name = "common"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.10"
cortex-m-rt = "0.6.5"
heapless = { version = "0.4.4", features = ["const-fn"] }
panic-never = "0.1.0"
ufmt = { path = ".." }

[profile.release]
codegen-units = 1 # better optimizations
lto = true # better optimizations
opt-level = "z"
