[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"
name = "common"
publish = false
version = "0.0.0"

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
heapless = { version = "0.5.1" }
panic-never = "0.1.0"
ufmt = { path = ".." }
ufmt-utils = { path = "../utils" }

[profile.release]
codegen-units = 1 # better optimizations
lto = true # better optimizations
opt-level = "z"

[workspace]
