[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["embedded", "no-std"]
description = "`μfmt` utilities"
documentation = "https://docs.rs/ufmt-utils"
edition = "2018"
keywords = ["Debug", "Display", "Write", "format"]
license = "MIT OR Apache-2.0"
name = "ufmt-utils"
repository = "https://github.com/japaric/ufmt"
version = "0.1.1"

[dependencies]
heapless = "0.5.0"
ufmt-write = { version = "0.1.0", path = "../write" }

[dev-dependencies]
ufmt = { version = "0.1.0", path = ".." }
