[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["embedded", "no-std"]
description = "`μfmt`'s `uWrite` trait"
edition = "2018"
keywords = ["Debug", "Display", "Write", "format"]
license = "MIT OR Apache-2.0"
name = "ufmt-write"
repository = "https://github.com/japaric/ufmt"
version = "0.1.0"

# NOTE do NOT add an `alloc` feature before the alloc crate can be used in
# no-std BINARIES
[features]
# NOTE do NOT turn `std` into a default feature; this is a no-std first crate
std = []
